[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/Sounds/Hurt.wav" type="AudioStream" id=1]
[ext_resource path="res://Scripts/States/PlayState/GameOverState.gd" type="Script" id=5]
[ext_resource path="res://Assets/Music/gameOverEnd.ogg" type="AudioStream" id=6]
[ext_resource path="res://Assets/Sprites/Characters/BoyfriendDeath.png" type="Texture" id=7]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("DeathSprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DeathSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 6 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("DeathStream:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
resource_name = "bop"
length = 0.5
step = 0.05

[sub_resource type="Animation" id=4]
resource_name = "confirm"
length = 3.0
step = 0.05

[sub_resource type="Animation" id=1]
resource_name = "die"
length = 2.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("DeathSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.65, 0.75, 0.8, 0.85, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 0, 1, 2, 3, 0, 1, 2, 3, 0, 1, 4, 5, 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DeathSprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7, 0.75, 0.8 ),
"transitions": PoolRealArray( 1, 0, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, -2 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("DeathStream:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=6]
resource_name = "bop"
length = 0.5
step = 0.05

[sub_resource type="Animation" id=7]
resource_name = "confirm"
length = 3.0
step = 0.05

[sub_resource type="Animation" id=8]
resource_name = "die"
length = 2.25
step = 0.05

[node name="GameOverState" type="Node2D"]
script = ExtResource( 5 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true
smoothing_speed = 1.0

[node name="ColorRect" type="ColorRect" parent="Camera2D"]
margin_left = -1800.0
margin_top = -1220.0
margin_right = 1851.0
margin_bottom = 1301.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="DeathSprite" type="Sprite" parent="."]
scale = Vector2( 9, 9 )
texture = ExtResource( 7 )
flip_h = true
hframes = 7
frame = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "die"
anims/RESET = SubResource( 2 )
anims/bop = SubResource( 3 )
anims/confirm = SubResource( 4 )
anims/die = SubResource( 1 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
autoplay = "die"
anims/RESET = SubResource( 5 )
anims/bop = SubResource( 6 )
anims/confirm = SubResource( 7 )
anims/die = SubResource( 8 )

[node name="EndStream" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = 2.0
bus = "SFX"

[node name="DeathStream" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = 2.0
bus = "SFX"
__meta__ = {
"_editor_description_": ""
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GameOverLabel" type="Label" parent="CanvasLayer"]
visible = false
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer"]
visible = false
margin_top = 56.0
margin_right = 40.0
margin_bottom = 70.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer2" to="." method="_on_AnimationPlayer_animation_finished"]
